Fixed title and menu links overlap in header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,6 +138,7 @@ header {
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 1em 0;
+  line-height: 2.5em;
 }
 
 header .main {
